--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
       <title>I Do!</title>
       <link href="https://fonts.googleapis.com/css?family=Trirong" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" type="text/css" href="css/style.css">
 <!--       <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="parallax.js"></script>
+    <script src="js/parallax.js"></script>
     </head>
   <body>    
     <div id="container">
