position rsvp form

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#B">about-us</a></li>
             <li><a href="#our-story">Our Story</a></li>
-            <li><a href="#rsvp">RSVP</a></li>
+            <li><a href="#when-where">When and Where</a></li>
+            <li><a href="#guestbook">Guestbook</a></li>
+            <!-- <li><a href="#rsvp">RSVP</a></li> -->
           </ul>
         </nav>  
       </header>
@@ -45,9 +47,21 @@
           <h2>Our Story</h2>
         </div>
       </section>
-      <aside id="rsvp" class="content">
+      <section>
+        <div id="when-where" class="content">
+      
+        </div>
+      </section>
+      <section>
+        <div class="content"></div>
+      </section>
+      <aside id="rsvp">
         <h2>RSVP</h2>
       </aside>
+      <section>
+        <div class="content"></div>
+      </section>
+
       <footer></footer>
     </div>
   </body>
