--- a/index.html
+++ b/index.html
@@ -55,9 +55,16 @@
       <section>
         <div class="content"></div>
       </section>
-      <aside id="rsvp">
-        <h2>RSVP</h2>
-      </aside>
+      <!-- <aside id="rsvp">
+        <div class="left">
+          <h2>Contact</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. </p>
+        </div>
+        <div class="right"></div>
+      </aside> -->
       <section>
         <div class="content"></div>
       </section>
