--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav id="navbar" class="bottom">
           <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#B">about-us</a></li>
+            <li><a href="#about-us">About Us</a></li>
             <li><a href="#our-story">Our Story</a></li>
             <li><a href="#when-where">When and Where</a></li>
             <li><a href="#guestbook">Guestbook</a></li>
@@ -53,7 +53,10 @@
         </div>
       </section>
       <section>
-        <div class="content"></div>
+        <div id="guestbook" class="content">
+          
+          
+        </div>
       </section>
       <!-- <aside id="rsvp">
         <div class="left">
