--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       </header>
       <section>
         <div id="about-us" class="content">
-          <!-- <h2>About Us</h2> -->
+          <h2>About Us</h2>
           <div class="half">
-              <h2>From Alex</h2>
+              <h3>From Alex</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -37,7 +37,7 @@
               cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
               proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div><div class="half">
-              <h2>From Haruka</h2>
+              <h3>From Haruka</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
