--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>I Do!</title>
+    <title>A&H</title>
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Trirong|Pacifico" rel="stylesheet">
 
@@ -9,7 +9,12 @@
     <link rel="stylesheet" type="text/css" href="css/timeline.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-<!--       <!-- jQuery -->
+    <!-- favicon -->
+    <link rel="icon" 
+      type="image/png" 
+      href="favicon.png">
+
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/parallax.js"></script>
     <script src="js/main.js"></script>
